<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>backend</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>${spring.boot.version}</version>
      </plugin>
    </plugins>
  </build>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>dubbo-bom</artifactId>
        <groupId>org.apache.dubbo</groupId>
        <version>3.3.0-beta.2</version>
      </dependency>
      <dependency>
        <artifactId>spring-cloud-dependencies</artifactId>
        <groupId>org.springframework.cloud</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring.cloud.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-boot-dependencies</artifactId>
        <groupId>org.springframework.boot</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring.boot.version}</version>
      </dependency>
      <dependency>
        <artifactId>redisson-spring-boot-starter</artifactId>
        <groupId>org.redisson</groupId>
        <version>${redisson}</version>
      </dependency>
      <dependency>
        <artifactId>mybatis-plus-boot-starter</artifactId>
        <groupId>com.baomidou</groupId>
        <version>${mybatis-plus.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
        <groupId>com.alibaba.cloud</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring.cloud.alibaba.version}</version>
      </dependency>
      <dependency>
        <artifactId>mysql-connector-java</artifactId>
        <groupId>mysql</groupId>
        <version>${mysql-connector.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <groupId>www.Raven</groupId>
  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>jc-user</module>
    <module>jc-common</module>
    <module>jc-gateway</module>
    <module>jc-im</module>
    <module>jc-auth</module>
    <module>jc-feed</module>
    <module>jc-file</module>
  </modules>
  <packaging>pom</packaging>
  <properties>
    <dubbo>3.3.0-beta.2</dubbo>
    <hutool>5.8.26</hutool>
    <ipfs>1.3.3</ipfs>
    <jackson>2.17.0</jackson>
    <java.version>21</java.version>
    <juint>4.13.2</juint>
    <log>1.5.6</log>
    <lombok>1.18.28</lombok>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <mybatis-plus.version>3.5.6</mybatis-plus.version>
    <mysql-connector.version>8.0.31</mysql-connector.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <redisson>3.17.1</redisson>
    <spring.boot.version>3.2.4</spring.boot.version>
    <spring.cloud.alibaba.version>2023.0.0.0-RC1
    </spring.cloud.alibaba.version>
    <spring.cloud.version>2023.0.1</spring.cloud.version>
    <xxl-job>2.4.1</xxl-job>
  </properties>
  <version>1.0-SNAPSHOT</version>


</project>